--- a/snapface/src/app/app.component.html
+++ b/snapface/src/app/app.component.html
@@ -1,3 +1,6 @@
 <!-- Ici sont intégrées les instances de Components -->
 
-<app-face-snap></app-face-snap>
+<!-- <app-face-snap></app-face-snap> -->
+<app-face-snap [faceSnap]="mySnap"></app-face-snap>
+<app-face-snap [faceSnap]="myOtherSnap"></app-face-snap>
+<app-face-snap [faceSnap]="myLastSnap"></app-face-snap>
