--- a/snapface/src/app/face-snap/face-snap.component.html
+++ b/snapface/src/app/face-snap/face-snap.component.html
@@ -1,11 +1,25 @@
-<div class="face-snap-card">
+<!-- Version premeier
+    <div class="face-snap-card">
   <h2>{{ title }}</h2>
-  <!-- parce que les valeurs associées aux attributs sr et alt ne sont pas toujours de type string, on choisit ma syntaxe en attribut bindi g avec des crochets -->
-  <!-- <img src="{{ imageUrl }}" alt="{{ title }}" /> -->
+  <p>{{ description }}</p>
+ 
   <img [src]="imageUrl" [alt]="title" />
   <p>Crée le {{ createdDate }}</p>
   <p>
     <button (click)="onAddSnap()">{{ btnMsg }}</button>
     {{ snaps }}
+  </p>
+</div>-->
+
+<div class="face-snap-card">
+  <h2>{{ faceSnap.title }}</h2>
+  <p>{{ faceSnap.description }}</p>
+  <!-- parce que les valeurs associées aux attributs sr et alt ne sont pas toujours de type string, on choisit ma syntaxe en attribut bindi g avec des crochets -->
+  <!-- <img src="{{ imageUrl }}" alt="{{ title }}" /> -->
+  <img [src]="faceSnap.imageUrl" [alt]="faceSnap.title" />
+  <p>Crée le {{ faceSnap.createdDate }}</p>
+  <p>
+    <button (click)="onAddSnap()">{{ btnMsg }}</button>
+    {{ faceSnap.snaps }}
   </p>
 </div>
