--- a/snapface/src/app/face-snap/face-snap.component.scss
+++ b/snapface/src/app/face-snap/face-snap.component.scss
@@ -1,6 +1,8 @@
 .face-snap-card {
-  width: 35%;
   img {
-    width: 100%;
+    border: var(--facesnapcolor) solid 2px;
+  }
+  button {
+    background-color: var(--facesnapcolor);
   }
 }
