--- a/snapface/src/app/sea-snap/sea-snap.component.scss
+++ b/snapface/src/app/sea-snap/sea-snap.component.scss
@@ -1,9 +1,8 @@
 .sea-snap-card {
-  width: 35%;
-
   img {
-    width: 100%;
-    border-radius: 10px;
-    border: 2px solid rgb(50, 62, 121);
+    border: var(--seasnapcolor) solid 2px;
+  }
+  button {
+    background-color: var(--seasnapcolor);
   }
 }
