--- a/snapface/src/styles.scss
+++ b/snapface/src/styles.scss
@@ -2,3 +2,40 @@
 * {
   font-family: Roboto, Helvetica, sans-serif;
 }
+:root {
+  --facesnapcolor: yellow;
+  --seasnapcolor: rgb(113, 113, 194);
+  --cloudsnapcolor: rgb(208, 156, 156);
+}
+.snap-card {
+  box-sizing: border-box;
+  width: 50%;
+  margin: 20px auto;
+  padding: 10px 30px;
+  box-shadow: lightgray 4px 4px 20px;
+  img {
+    width: 100%;
+    border-radius: 2rem;
+  }
+  h2 {
+    margin-bottom: 0;
+  }
+  p {
+    font-weight: 300;
+    font-size: 16px;
+  }
+  button {
+    box-sizing: border-box;
+    padding: 5px 10px;
+    border: none;
+    box-shadow: lightgray 3px 3px 7px;
+    margin-right: 20px;
+    outline: none;
+    font-size: 14px;
+    font-weight: 500;
+    &:active {
+      transform: translate(1px, 1px);
+      box-shadow: lightgray 0 0 5px;
+    }
+  }
+}
